--- a/Main.html
+++ b/Main.html
@@ -14,6 +14,9 @@
     <br>
     <p> Miguel es un estudiante del Master de Full Stack Development. Tiene una vasta experiencia profesional en la empresa (<a href="https://www.ibm.com">IBM </a>). Donde ha trabajado toda su vida profesional.
     </p>
+    <!-- Añadiendo el hotfix-1 -->
+     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>       
     <ul>
         <li>En 2008, Miguel se certificó como PMP - Project Manager Professional por el PMI. </li>
         <li>En 2012, Obtuvo la certificación de PgMP - Program Manager Professional por el PMI. </l>
